# Camp-60-Days-of-Code

./: README.md  hello.txt  pyproject.toml
day_1/: main_1.py
day_10/: main_10.py
day_11/: main_11.py
day_12/: main_12.py
day_13/: main_13.py
day_14/: main_14.py
day_15/: main_15.py
day_16/: bonus_exsample.py  main_16.py  ыыы.py
day_17/: bonus_exsample_17.py  main_17.py
day_18/: main_18.py
day_19/: code_expirience.py  functions.py  hello.txt  main_19.py
day_21/: main_21.py
day_22/: main_22.py
day_23/: data.csv  main_23.py
day_23/pages/: Contact_Us.py
day_24/: main_24.py
day_25/: main_25.py
day_25/me_work/: main_me.py
day_29/: main_29.py  tutorial.html
day_29/templates/: home.html
day_3/: main_3.py
day_30/: main.py
day_32/: backend.py  main_32.py
day_32/happ_data/: s_project.py
day_34/: main_34.py
day_36/: main_36.py
day_39/: data.db  main_39.py
day_4/: main_4.py
day_40/: main.py  main_40.py
day_41/class_work/: main_40.py  planning
day_41/hometask/: ht.py  pdf_code.py
day_42/: main_42.py
day_43/: main2.py
day_45/: database.db  example.py  hint.py  main_45.py
day_48/: main.py
day_5/: main_5.py
day_55/mysite/: settings.py
day_55/restaurant_menu/: models.py
day_58/: main_58.py
day_6/: main_6.py
day_60/: main_60.py
day_7/: main_7.py
day_8/: coding_expirience.py  head_or_tail.txt  main_8.py  todo.py
day_9/: checked_pass.py  main_9.py
job_application/: admin.py  models.py  views.py
job_application/migrations/: 0001_initial.py  (+1 more)
mysite/: settings.py
rest_API/: main_rest.py
(+6 files in other folders)
