[tool.poetry]
name = "camp-60-days-of-code"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorokin <sorokin.dm@promail366.com>"]
readme = "README.md"
packages = [{include = "camp_60_days_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
