[tool.poetry]
name = "camp-60-days-of-code"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorokin <sorokin.dm@promail366.com>"]
readme = "README.md"
packages = [{include = "camp_60_days_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.5"
requests = "^2.31.0"
streamlit = "^1.25.0"
openpyxl = "^3.1.2"
pytest = "^7.4.0"
pytest-ordering = "^0.6"
fpdf = "^1.7.2"
Flask = "^2.3.2"
matplotlib = "^3.7.2"
plotly-express = "^0.4.1"
opencv-python = "^4.8.0.76"
selectorlib = "^0.16.0"
PyQt6 = "^6.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
